--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/pop_border"
+            android:background="#F5ECD9"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -585,173 +585,140 @@
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
         android:layout_width="match_parent"
-        android:layout_height="116dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtAguardando"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingRight="5dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/button2"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="5dp"
-                    android:src="@mipmap/capa" />
-
-                <TextView
+                <Button
                     android:id="@+id/btnCandidato1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/latoitalic"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
                     android:text="Candidato" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingRight="5dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="5dp"
-                    android:src="@mipmap/capa" />
-
-                <TextView
+                <Button
                     android:id="@+id/btnCandidato2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/latoitalic"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
                     android:text="Candidato" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingRight="5dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="5dp"
-                    android:src="@mipmap/capa" />
-
-                <TextView
+                <Button
                     android:id="@+id/btnCandidato3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/latoitalic"
+                    android:alpha="1"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
                     android:text="Candidato" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingRight="5dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="5dp"
-                    android:cropToPadding="false"
-                    android:src="@mipmap/capa" />
-
-                <TextView
+                <Button
                     android:id="@+id/btnCandidato4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/latoitalic"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
                     android:text="Candidato" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingRight="5dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="5dp"
-                    android:cropToPadding="false"
-                    android:src="@mipmap/capa" />
-
-                <TextView
+                <Button
                     android:id="@+id/btnCandidato5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/latoitalic"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
                     android:text="Candidato" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingRight="5dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="5dp"
-                    android:cropToPadding="false"
-                    android:src="@mipmap/capa" />
-
-                <TextView
+                <Button
                     android:id="@+id/btnCandidato6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/latoitalic"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
                     android:text="Candidato" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="5dp"
-                    android:cropToPadding="false"
-                    android:src="@mipmap/capa" />
-
-
-                <TextView
+                <Button
                     android:id="@+id/btnCandidato7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/latoitalic"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
+                    android:text="Candidato" />
+
+                <Button
+                    android:id="@+id/btnCandidato8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
+                    android:text="Candidato" />
+
+                <Button
+                    android:id="@+id/btnCandidato9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
+                    android:text="Candidato" />
+
+                <Button
+                    android:id="@+id/btnCandidato10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
+                    android:text="Candidato" />
+
+                <Button
+                    android:id="@+id/btnCandidato11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
+                    android:text="Candidato" />
+
+                <Button
+                    android:id="@+id/btnCandidato12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
+                    android:text="Candidato" />
+
+                <Button
+                    android:id="@+id/btnCandidato13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/pop_bg"
+                    android:fontFamily="@font/latoblackitalic"
                     android:text="Candidato" />
             </LinearLayout>
         </LinearLayout>
